Fix layout overflow

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 
   display: grid;
   grid-template-columns: 1fr 3fr;
+  grid-template-rows: minmax(0, 1fr);
 
   height: 100dvh;
   margin: 0;
@@ -47,6 +48,7 @@ body {
 }
 
 .Nav {
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   background-color: var(--color-mantle);
@@ -96,13 +98,14 @@ body {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
   gap: var(--s2);
 
-  margin: var(--s2);
+  padding: var(--s2);
 }
 
 .Parking {
+  overflow-y: auto;
   padding: var(--s1);
   background-color: var(--color-surface0);
   border-radius: var(--s1);
